fix: TT-344 add horizontal scrolling to handle overflow caused by new datatable format

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@ body {
   width: 100vw;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow-x: scroll;
   overflow-y: hidden;
 }
 
